--- a/search_engine/result_quality.ipynb
+++ b/search_engine/result_quality.ipynb
@@ -323,73 +323,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrival time for [best marvel movie] with search -> 1.589458703994751\n",
-      "Average precision for [best marvel movie] -> 0.4143333333333333\n",
-      "recall for [best marvel movie] -> 0.067\n",
-      "Retrival time for [How do kids come to world?] with search -> 1.9208457469940186\n",
-      "Average precision for [How do kids come to world?] -> 0.0\n",
-      "recall for [How do kids come to world?] -> 0.0\n",
-      "Retrival time for [Information retrieval] with search -> 0.8245463371276855\n",
-      "Average precision for [Information retrieval] -> 0.48295454545454547\n",
-      "recall for [Information retrieval] -> 0.55\n",
-      "Retrival time for [LinkedIn] with search -> 0.49173450469970703\n",
-      "Average precision for [LinkedIn] -> 0.0\n",
-      "recall for [LinkedIn] -> 0.0\n",
-      "Retrival time for [How to make coffee?] with search -> 0.8424937725067139\n",
-      "Average precision for [How to make coffee?] -> 0.0\n",
-      "recall for [How to make coffee?] -> 0.0\n",
-      "Retrival time for [Ritalin] with search -> 1.34415602684021\n",
-      "Average precision for [Ritalin] -> 1.0\n",
-      "recall for [Ritalin] -> 0.079\n",
-      "Retrival time for [How to make wine at home?] with search -> 2.6954615116119385\n",
+      "Retrival time for [best marvel movie] with search -> 2.8787693977355957\n",
+      "Average precision for [best marvel movie] -> 0.0\n",
+      "recall for [best marvel movie] -> 0.0\n",
+      "Retrival time for [How do kids come to world?] with search -> 4.621966600418091\n",
+      "Average precision for [How do kids come to world?] -> 0.048\n",
+      "recall for [How do kids come to world?] -> 0.02\n",
+      "Retrival time for [Information retrieval] with search -> 2.194486379623413\n",
+      "Average precision for [Information retrieval] -> 0.7800769230769232\n",
+      "recall for [Information retrieval] -> 0.65\n",
+      "Retrival time for [LinkedIn] with search -> 0.35085058212280273\n",
+      "Average precision for [LinkedIn] -> 1.0\n",
+      "recall for [LinkedIn] -> 0.467\n",
+      "Retrival time for [How to make coffee?] with search -> 1.5951175689697266\n",
+      "Average precision for [How to make coffee?] -> 0.083\n",
+      "recall for [How to make coffee?] -> 0.022\n",
+      "Retrival time for [Ritalin] with search -> 0.3400084972381592\n",
+      "Average precision for [Ritalin] -> 0.541\n",
+      "recall for [Ritalin] -> 0.316\n",
+      "Retrival time for [How to make wine at home?] with search -> 3.451756477355957\n",
       "Average precision for [How to make wine at home?] -> 0.0\n",
       "recall for [How to make wine at home?] -> 0.0\n",
-      "Retrival time for [Most expensive city in the world] with search -> 2.4527580738067627\n",
-      "Average precision for [Most expensive city in the world] -> 0.0\n",
-      "recall for [Most expensive city in the world] -> 0.0\n",
-      "Retrival time for [India] with search -> 1.2018506526947021\n",
-      "Average precision for [India] -> 0.8335\n",
+      "Retrival time for [Most expensive city in the world] with search -> 7.034226417541504\n",
+      "Average precision for [Most expensive city in the world] -> 0.4075\n",
+      "recall for [Most expensive city in the world] -> 0.087\n",
+      "Retrival time for [India] with search -> 1.151716947555542\n",
+      "Average precision for [India] -> 0.0695\n",
       "recall for [India] -> 0.041\n",
-      "Retrival time for [how to make money fast?] with search -> 0.8498287200927734\n",
-      "Average precision for [how to make money fast?] -> 0.0\n",
-      "recall for [how to make money fast?] -> 0.0\n",
-      "Retrival time for [Netflix] with search -> 0.6853742599487305\n",
-      "Average precision for [Netflix] -> 0.0\n",
-      "recall for [Netflix] -> 0.0\n",
-      "Retrival time for [Apple computer] with search -> 1.248438835144043\n",
-      "Average precision for [Apple computer] -> 0.0565\n",
-      "recall for [Apple computer] -> 0.048\n",
-      "Retrival time for [The Simpsons] with search -> 0.5144290924072266\n",
-      "Average precision for [The Simpsons] -> 0.0\n",
-      "recall for [The Simpsons] -> 0.0\n",
-      "Retrival time for [World cup] with search -> 2.2684359550476074\n",
-      "Average precision for [World cup] -> 0.0\n",
-      "recall for [World cup] -> 0.0\n",
-      "Retrival time for [How to lose weight?] with search -> 0.32291698455810547\n",
-      "Average precision for [How to lose weight?] -> 1.0\n",
-      "recall for [How to lose weight?] -> 0.045\n",
-      "Retrival time for [Java] with search -> 0.6824436187744141\n",
-      "Average precision for [Java] -> 1.0\n",
-      "recall for [Java] -> 0.022\n",
-      "Retrival time for [Air Jordan] with search -> 2.548086404800415\n",
-      "Average precision for [Air Jordan] -> 0.0\n",
-      "recall for [Air Jordan] -> 0.0\n",
-      "Retrival time for [how to deal with depression?] with search -> 1.7068288326263428\n",
+      "Retrival time for [how to make money fast?] with search -> 3.287998676300049\n",
+      "Average precision for [how to make money fast?] -> 0.5276666666666666\n",
+      "recall for [how to make money fast?] -> 0.091\n",
+      "Retrival time for [Netflix] with search -> 0.4166548252105713\n",
+      "Average precision for [Netflix] -> 0.6348750000000001\n",
+      "recall for [Netflix] -> 0.471\n",
+      "Retrival time for [Apple computer] with search -> 0.9408082962036133\n",
+      "Average precision for [Apple computer] -> 0.329\n",
+      "recall for [Apple computer] -> 0.095\n",
+      "Retrival time for [The Simpsons] with search -> 0.37113165855407715\n",
+      "Average precision for [The Simpsons] -> 0.2001\n",
+      "recall for [The Simpsons] -> 0.256\n",
+      "Retrival time for [World cup] with search -> 5.195284128189087\n",
+      "Average precision for [World cup] -> 0.036\n",
+      "recall for [World cup] -> 0.023\n",
+      "Retrival time for [How to lose weight?] with search -> 1.7321090698242188\n",
+      "Average precision for [How to lose weight?] -> 0.0\n",
+      "recall for [How to lose weight?] -> 0.0\n",
+      "Retrival time for [Java] with search -> 0.41559672355651855\n",
+      "Average precision for [Java] -> 0.0665\n",
+      "recall for [Java] -> 0.043\n",
+      "Retrival time for [Air Jordan] with search -> 2.6952106952667236\n",
+      "Average precision for [Air Jordan] -> 0.49699999999999994\n",
+      "recall for [Air Jordan] -> 0.103\n",
+      "Retrival time for [how to deal with depression?] with search -> 1.921205997467041\n",
       "Average precision for [how to deal with depression?] -> 0.0\n",
       "recall for [how to deal with depression?] -> 0.0\n",
-      "Retrival time for [How do you make gold] with search -> 1.0409703254699707\n",
+      "Retrival time for [How do you make gold] with search -> 2.2748842239379883\n",
       "Average precision for [How do you make gold] -> 0.0\n",
       "recall for [How do you make gold] -> 0.0\n",
-      "Retrival time for [Marijuana] with search -> 0.35247182846069336\n",
-      "Average precision for [Marijuana] -> 0.37825000000000003\n",
-      "recall for [Marijuana] -> 0.17\n",
-      "0.25827689393939396\n"
+      "Retrival time for [Marijuana] with search -> 0.3680415153503418\n",
+      "Average precision for [Marijuana] -> 0.21133333333333335\n",
+      "recall for [Marijuana] -> 0.064\n",
+      "0.2715775961538461\n"
      ]
     }
    ],
