--- a/search_engine/result_quality.ipynb
+++ b/search_engine/result_quality.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "def precision_at_k(expected ,actual,k=40):\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def recall(expected ,actual,k=40):\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def ap_at_k(expected ,actual,k=40):\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def map_at_K(expected, actual, k=40):\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def plot_version_time(times):\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def plot_recall_for_different_k(expected, actual, k):\n",
@@ -323,73 +323,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrival time for [best marvel movie] with search -> 2.8787693977355957\n",
-      "Average precision for [best marvel movie] -> 0.0\n",
-      "recall for [best marvel movie] -> 0.0\n",
-      "Retrival time for [How do kids come to world?] with search -> 4.621966600418091\n",
-      "Average precision for [How do kids come to world?] -> 0.048\n",
-      "recall for [How do kids come to world?] -> 0.02\n",
-      "Retrival time for [Information retrieval] with search -> 2.194486379623413\n",
-      "Average precision for [Information retrieval] -> 0.7800769230769232\n",
-      "recall for [Information retrieval] -> 0.65\n",
-      "Retrival time for [LinkedIn] with search -> 0.35085058212280273\n",
-      "Average precision for [LinkedIn] -> 1.0\n",
-      "recall for [LinkedIn] -> 0.467\n",
-      "Retrival time for [How to make coffee?] with search -> 1.5951175689697266\n",
-      "Average precision for [How to make coffee?] -> 0.083\n",
-      "recall for [How to make coffee?] -> 0.022\n",
-      "Retrival time for [Ritalin] with search -> 0.3400084972381592\n",
-      "Average precision for [Ritalin] -> 0.541\n",
-      "recall for [Ritalin] -> 0.316\n",
-      "Retrival time for [How to make wine at home?] with search -> 3.451756477355957\n",
-      "Average precision for [How to make wine at home?] -> 0.0\n",
-      "recall for [How to make wine at home?] -> 0.0\n",
-      "Retrival time for [Most expensive city in the world] with search -> 7.034226417541504\n",
-      "Average precision for [Most expensive city in the world] -> 0.4075\n",
-      "recall for [Most expensive city in the world] -> 0.087\n",
-      "Retrival time for [India] with search -> 1.151716947555542\n",
-      "Average precision for [India] -> 0.0695\n",
-      "recall for [India] -> 0.041\n",
-      "Retrival time for [how to make money fast?] with search -> 3.287998676300049\n",
-      "Average precision for [how to make money fast?] -> 0.5276666666666666\n",
-      "recall for [how to make money fast?] -> 0.091\n",
-      "Retrival time for [Netflix] with search -> 0.4166548252105713\n",
-      "Average precision for [Netflix] -> 0.6348750000000001\n",
-      "recall for [Netflix] -> 0.471\n",
-      "Retrival time for [Apple computer] with search -> 0.9408082962036133\n",
-      "Average precision for [Apple computer] -> 0.329\n",
-      "recall for [Apple computer] -> 0.095\n",
-      "Retrival time for [The Simpsons] with search -> 0.37113165855407715\n",
-      "Average precision for [The Simpsons] -> 0.2001\n",
-      "recall for [The Simpsons] -> 0.256\n",
-      "Retrival time for [World cup] with search -> 5.195284128189087\n",
-      "Average precision for [World cup] -> 0.036\n",
-      "recall for [World cup] -> 0.023\n",
-      "Retrival time for [How to lose weight?] with search -> 1.7321090698242188\n",
-      "Average precision for [How to lose weight?] -> 0.0\n",
-      "recall for [How to lose weight?] -> 0.0\n",
-      "Retrival time for [Java] with search -> 0.41559672355651855\n",
-      "Average precision for [Java] -> 0.0665\n",
-      "recall for [Java] -> 0.043\n",
-      "Retrival time for [Air Jordan] with search -> 2.6952106952667236\n",
-      "Average precision for [Air Jordan] -> 0.49699999999999994\n",
-      "recall for [Air Jordan] -> 0.103\n",
-      "Retrival time for [how to deal with depression?] with search -> 1.921205997467041\n",
-      "Average precision for [how to deal with depression?] -> 0.0\n",
-      "recall for [how to deal with depression?] -> 0.0\n",
-      "Retrival time for [How do you make gold] with search -> 2.2748842239379883\n",
-      "Average precision for [How do you make gold] -> 0.0\n",
-      "recall for [How do you make gold] -> 0.0\n",
-      "Retrival time for [Marijuana] with search -> 0.3680415153503418\n",
-      "Average precision for [Marijuana] -> 0.21133333333333335\n",
-      "recall for [Marijuana] -> 0.064\n",
-      "0.2715775961538461\n"
+      "Retrival time for [How to make hummus] with search -> 1.6875977516174316\n",
+      "Average precision for [How to make hummus] -> 1.0\n",
+      "recall for [How to make hummus] -> 0.023\n",
+      "Retrival time for [Winter] with search -> 0.9116666316986084\n",
+      "Average precision for [Winter] -> 0.2837142857142857\n",
+      "recall for [Winter] -> 0.149\n",
+      "Retrival time for [Rick and Morty] with search -> 0.5042405128479004\n",
+      "Average precision for [Rick and Morty] -> 0.9352\n",
+      "recall for [Rick and Morty] -> 0.517\n",
+      "Retrival time for [Natural Language processing] with search -> 2.0811474323272705\n",
+      "Average precision for [Natural Language processing] -> 1.0\n",
+      "recall for [Natural Language processing] -> 0.15\n",
+      "Retrival time for [World Cup 2022] with search -> 5.206852912902832\n",
+      "Average precision for [World Cup 2022] -> 0.3549375000000001\n",
+      "recall for [World Cup 2022] -> 0.593\n",
+      "Retrival time for [Dolly the sheep] with search -> 0.4380474090576172\n",
+      "Average precision for [Dolly the sheep] -> 0.591\n",
+      "recall for [Dolly the sheep] -> 0.049\n",
+      "Retrival time for [Cigarettes] with search -> 0.6001865863800049\n",
+      "Average precision for [Cigarettes] -> 0.068\n",
+      "recall for [Cigarettes] -> 0.2\n",
+      "Retrival time for [What is the best place to live in?] with search -> 5.400291681289673\n",
+      "Average precision for [What is the best place to live in?] -> 0.0\n",
+      "recall for [What is the best place to live in?] -> 0.0\n",
+      "Retrival time for [Elon musk] with search -> 0.516909122467041\n",
+      "Average precision for [Elon musk] -> 0.71\n",
+      "recall for [Elon musk] -> 0.13\n",
+      "Retrival time for [How do you breed flowers?] with search -> 0.7164735794067383\n",
+      "Average precision for [How do you breed flowers?] -> 0.0\n",
+      "recall for [How do you breed flowers?] -> 0.0\n",
+      "0.49428517857142856\n"
      ]
     }
    ],
@@ -402,7 +372,7 @@
     "    queries = json.load(f)\n",
     "\n",
     "# place the domain you got from ngrok or GCP IP below.\n",
-    "url = 'http://104.198.201.67:8080'\n",
+    "url = 'http://34.135.98.153:8080'\n",
     "\n",
     "qs_res = []\n",
     "for query, wiki_ids in list(queries.items())[:20]:\n",
