--- a/search_engine/result_quality.ipynb
+++ b/search_engine/result_quality.ipynb
@@ -323,43 +323,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrival time for [How to make hummus] with search -> 1.6875977516174316\n",
-      "Average precision for [How to make hummus] -> 1.0\n",
-      "recall for [How to make hummus] -> 0.023\n",
-      "Retrival time for [Winter] with search -> 0.9116666316986084\n",
-      "Average precision for [Winter] -> 0.2837142857142857\n",
-      "recall for [Winter] -> 0.149\n",
-      "Retrival time for [Rick and Morty] with search -> 0.5042405128479004\n",
-      "Average precision for [Rick and Morty] -> 0.9352\n",
-      "recall for [Rick and Morty] -> 0.517\n",
-      "Retrival time for [Natural Language processing] with search -> 2.0811474323272705\n",
-      "Average precision for [Natural Language processing] -> 1.0\n",
-      "recall for [Natural Language processing] -> 0.15\n",
-      "Retrival time for [World Cup 2022] with search -> 5.206852912902832\n",
-      "Average precision for [World Cup 2022] -> 0.3549375000000001\n",
-      "recall for [World Cup 2022] -> 0.593\n",
-      "Retrival time for [Dolly the sheep] with search -> 0.4380474090576172\n",
-      "Average precision for [Dolly the sheep] -> 0.591\n",
-      "recall for [Dolly the sheep] -> 0.049\n",
-      "Retrival time for [Cigarettes] with search -> 0.6001865863800049\n",
-      "Average precision for [Cigarettes] -> 0.068\n",
-      "recall for [Cigarettes] -> 0.2\n",
-      "Retrival time for [What is the best place to live in?] with search -> 5.400291681289673\n",
+      "Retrival time for [best marvel movie] with search -> 3.586242198944092\n",
+      "Average precision for [best marvel movie] -> 0.0\n",
+      "recall for [best marvel movie] -> 0.0\n",
+      "Retrival time for [How do kids come to world?] with search -> 4.298160791397095\n",
+      "Average precision for [How do kids come to world?] -> 0.1\n",
+      "recall for [How do kids come to world?] -> 0.02\n",
+      "Retrival time for [Information retrieval] with search -> 1.9424002170562744\n",
+      "Average precision for [Information retrieval] -> 0.7804583333333336\n",
+      "recall for [Information retrieval] -> 0.6\n",
+      "Retrival time for [LinkedIn] with search -> 1.2708654403686523\n",
+      "Average precision for [LinkedIn] -> 0.0\n",
+      "recall for [LinkedIn] -> 0.0\n",
+      "Retrival time for [How to make coffee?] with search -> 2.3687193393707275\n",
+      "Average precision for [How to make coffee?] -> 0.0\n",
+      "recall for [How to make coffee?] -> 0.0\n",
+      "Retrival time for [Ritalin] with search -> 1.2777814865112305\n",
+      "Average precision for [Ritalin] -> 0.6110000000000001\n",
+      "recall for [Ritalin] -> 0.237\n",
+      "Retrival time for [How to make wine at home?] with search -> 3.861959934234619\n",
+      "Average precision for [How to make wine at home?] -> 0.0\n",
+      "recall for [How to make wine at home?] -> 0.0\n",
+      "Retrival time for [Most expensive city in the world] with search -> 5.775113344192505\n",
+      "Average precision for [Most expensive city in the world] -> 1.0\n",
+      "recall for [Most expensive city in the world] -> 0.022\n",
+      "Retrival time for [India] with search -> 1.8294506072998047\n",
+      "Average precision for [India] -> 0.4458571428571429\n",
+      "recall for [India] -> 0.143\n",
+      "Retrival time for [how to make money fast?] with search -> 2.9290122985839844\n",
+      "Average precision for [how to make money fast?] -> 0.43525\n",
+      "recall for [how to make money fast?] -> 0.121\n",
+      "Retrival time for [Netflix] with search -> 1.3088877201080322\n",
+      "Average precision for [Netflix] -> 0.6372727272727272\n",
+      "recall for [Netflix] -> 0.324\n",
+      "Retrival time for [Apple computer] with search -> 1.646132230758667\n",
+      "Average precision for [Apple computer] -> 0.2665\n",
+      "recall for [Apple computer] -> 0.048\n",
+      "Retrival time for [The Simpsons] with search -> 1.284876823425293\n",
+      "Average precision for [The Simpsons] -> 0.31655555555555553\n",
+      "recall for [The Simpsons] -> 0.231\n",
+      "Retrival time for [World cup] with search -> 4.300310373306274\n",
+      "Average precision for [World cup] -> 0.43340000000000006\n",
+      "recall for [World cup] -> 0.227\n",
+      "Retrival time for [How to lose weight?] with search -> 1.6360619068145752\n",
+      "Average precision for [How to lose weight?] -> 0.5\n",
+      "recall for [How to lose weight?] -> 0.023\n",
+      "Retrival time for [Java] with search -> 1.3330750465393066\n",
+      "Average precision for [Java] -> 0.5959333333333333\n",
+      "recall for [Java] -> 0.326\n",
+      "Retrival time for [Air Jordan] with search -> 2.102991819381714\n",
+      "Average precision for [Air Jordan] -> 0.7\n",
+      "recall for [Air Jordan] -> 0.069\n",
+      "Retrival time for [how to deal with depression?] with search -> 1.7847518920898438\n",
+      "Average precision for [how to deal with depression?] -> 0.0\n",
+      "recall for [how to deal with depression?] -> 0.0\n",
+      "Retrival time for [How do you make gold] with search -> 2.911557197570801\n",
+      "Average precision for [How do you make gold] -> 0.0\n",
+      "recall for [How do you make gold] -> 0.0\n",
+      "Retrival time for [Marijuana] with search -> 1.3440444469451904\n",
+      "Average precision for [Marijuana] -> 0.106\n",
+      "recall for [Marijuana] -> 0.043\n",
+      "Retrival time for [How to make hummus] with search -> 2.2348995208740234\n",
+      "Average precision for [How to make hummus] -> 0.27280000000000004\n",
+      "recall for [How to make hummus] -> 0.114\n",
+      "Retrival time for [Winter] with search -> 1.6885623931884766\n",
+      "Average precision for [Winter] -> 0.44239999999999996\n",
+      "recall for [Winter] -> 0.106\n",
+      "Retrival time for [Rick and Morty] with search -> 1.3750200271606445\n",
+      "Average precision for [Rick and Morty] -> 0.9910714285714286\n",
+      "recall for [Rick and Morty] -> 0.483\n",
+      "Retrival time for [Natural Language processing] with search -> 2.5088603496551514\n",
+      "Average precision for [Natural Language processing] -> 0.9545454545454546\n",
+      "recall for [Natural Language processing] -> 0.275\n",
+      "Retrival time for [World Cup 2022] with search -> 4.405431747436523\n",
+      "Average precision for [World Cup 2022] -> 0.3536428571428571\n",
+      "recall for [World Cup 2022] -> 0.519\n",
+      "Retrival time for [Dolly the sheep] with search -> 1.3886620998382568\n",
+      "Average precision for [Dolly the sheep] -> 0.47354545454545466\n",
+      "recall for [Dolly the sheep] -> 0.268\n",
+      "Retrival time for [Cigarettes] with search -> 1.329524278640747\n",
+      "Average precision for [Cigarettes] -> 0.062\n",
+      "recall for [Cigarettes] -> 0.133\n",
+      "Retrival time for [What is the best place to live in?] with search -> 5.274954080581665\n",
       "Average precision for [What is the best place to live in?] -> 0.0\n",
       "recall for [What is the best place to live in?] -> 0.0\n",
-      "Retrival time for [Elon musk] with search -> 0.516909122467041\n",
-      "Average precision for [Elon musk] -> 0.71\n",
-      "recall for [Elon musk] -> 0.13\n",
-      "Retrival time for [How do you breed flowers?] with search -> 0.7164735794067383\n",
-      "Average precision for [How do you breed flowers?] -> 0.0\n",
-      "recall for [How do you breed flowers?] -> 0.0\n",
-      "0.49428517857142856\n"
+      "Retrival time for [Elon musk] with search -> 1.2812979221343994\n",
+      "Average precision for [Elon musk] -> 0.3488\n",
+      "recall for [Elon musk] -> 0.217\n",
+      "Retrival time for [How do you breed flowers?] with search -> 1.4797084331512451\n",
+      "Average precision for [How do you breed flowers?] -> 0.167\n",
+      "recall for [How do you breed flowers?] -> 0.021\n",
+      "0.3664677429052429\n"
      ]
     }
    ],
@@ -372,10 +432,10 @@
     "    queries = json.load(f)\n",
     "\n",
     "# place the domain you got from ngrok or GCP IP below.\n",
-    "url = 'http://34.135.98.153:8080'\n",
+    "url = 'http://34.173.51.69:8080'\n",
     "\n",
     "qs_res = []\n",
-    "for query, wiki_ids in list(queries.items())[:20]:\n",
+    "for query, wiki_ids in list(queries.items())[:30]:\n",
     "    t, ap_k, recall_k = None, None, None\n",
     "    t_start = time()\n",
     "    try:\n",
@@ -397,7 +457,7 @@
     "        pass\n",
     "\n",
     "\n",
-    "map_k = sum([qr[2] for qr in qs_res]) / 20\n",
+    "map_k = sum([qr[2] for qr in qs_res]) / 30\n",
     "\n",
     "print(map_k)"
    ],
